--- a/MarsRoverPhotos/Storyboards/Base.lproj/Main.storyboard
+++ b/MarsRoverPhotos/Storyboards/Base.lproj/Main.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0HZ-Kz-xXt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0HZ-Kz-xXt">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,13 +18,60 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="qQZ-p3-6nq">
-                                <rect key="frame" x="0.0" y="50" width="390" height="43.666667938232422"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="100" id="qQZ-p3-6nq" customClass="CustomViewCell" customModule="MarsRoverPhotos" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="390" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qQZ-p3-6nq" id="pgL-5m-D3y">
-                                    <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WDd-tD-mFH">
+                                            <rect key="frame" x="0.0" y="8" width="125" height="84"/>
+                                        </imageView>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="G1Y-ER-Ahd">
+                                            <rect key="frame" x="133" y="11" width="221" height="78"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rover name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NBp-jQ-6Xb">
+                                                    <rect key="frame" x="0.0" y="0.0" width="221" height="21.333333333333332"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AeK-Rp-LHo">
+                                                    <rect key="frame" x="0.0" y="28.333333333333336" width="221" height="21.333333333333336"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VHf-Ls-TZv">
+                                                    <rect key="frame" x="0.0" y="56.666666666666679" width="221" height="21.333333333333336"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="G1Y-ER-Ahd" firstAttribute="leading" secondItem="WDd-tD-mFH" secondAttribute="trailing" constant="8" symbolic="YES" id="Hbg-hv-lL3"/>
+                                        <constraint firstAttribute="bottom" secondItem="WDd-tD-mFH" secondAttribute="bottom" constant="8" id="MMa-Q1-cra"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="G1Y-ER-Ahd" secondAttribute="trailing" constant="16" id="NlN-Q8-QJ6"/>
+                                        <constraint firstItem="WDd-tD-mFH" firstAttribute="top" secondItem="pgL-5m-D3y" secondAttribute="top" constant="8" id="Ylt-Fd-1Xo"/>
+                                        <constraint firstItem="WDd-tD-mFH" firstAttribute="leading" secondItem="pgL-5m-D3y" secondAttribute="leading" id="hSm-Ln-1th"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="G1Y-ER-Ahd" secondAttribute="bottom" id="kFq-Lu-5iC"/>
+                                        <constraint firstItem="G1Y-ER-Ahd" firstAttribute="top" secondItem="pgL-5m-D3y" secondAttribute="topMargin" id="tVp-eo-XuP"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <constraints>
+                                    <constraint firstItem="WDd-tD-mFH" firstAttribute="width" secondItem="qQZ-p3-6nq" secondAttribute="width" multiplier="0.320513" id="2Ep-vQ-p0M"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="cameraNameLabel" destination="AeK-Rp-LHo" id="rlf-eP-QQD"/>
+                                    <outlet property="datePhotoLabel" destination="VHf-Ls-TZv" id="KEb-s3-2Wx"/>
+                                    <outlet property="photoRoverImage" destination="WDd-tD-mFH" id="h2V-n6-P51"/>
+                                    <outlet property="roverNameLabel" destination="NBp-jQ-6Xb" id="HFK-rq-1mW"/>
+                                    <segue destination="Ti8-tG-rUh" kind="show" identifier="info" id="YsW-HL-IUY"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -35,7 +83,37 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EUH-ao-1DT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="688" y="-42"/>
+            <point key="canvasLocation" x="686.15384615384608" y="-42.654028436018955"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="H6r-ai-E8o">
+            <objects>
+                <viewController id="Ti8-tG-rUh" customClass="DetailViewController" customModule="MarsRoverPhotos" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2Aw-cD-NVc">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rvE-Pb-gbZ">
+                                <rect key="frame" x="16" y="91" width="358" height="216"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Qyc-la-YZ6"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rvE-Pb-gbZ" firstAttribute="leading" secondItem="Qyc-la-YZ6" secondAttribute="leading" constant="16" id="3LH-rZ-uqv"/>
+                            <constraint firstItem="rvE-Pb-gbZ" firstAttribute="height" secondItem="2Aw-cD-NVc" secondAttribute="height" multiplier="0.255924" id="Pxg-XC-YJU"/>
+                            <constraint firstItem="rvE-Pb-gbZ" firstAttribute="top" secondItem="Qyc-la-YZ6" secondAttribute="top" id="fwB-Cf-hUp"/>
+                            <constraint firstItem="Qyc-la-YZ6" firstAttribute="trailing" secondItem="rvE-Pb-gbZ" secondAttribute="trailing" constant="16" id="tY5-Dw-MuK"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="McS-Z4-Rtu"/>
+                    <connections>
+                        <outlet property="photoImage" destination="rvE-Pb-gbZ" id="azC-u9-4y8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w62-jD-3XK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1493.8461538461538" y="-43.364928909952603"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="nAj-Gn-zu6">
