--- a/MarsRoverPhotos/Storyboards/Base.lproj/Main.storyboard
+++ b/MarsRoverPhotos/Storyboards/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Mars Rover Photos-->
         <scene sceneID="Rxq-Tw-2m6">
             <objects>
                 <tableViewController id="2O6-hs-Fp5" customClass="RoverViewController" customModule="MarsRoverPhotos" customModuleProvider="target" sceneMemberID="viewController">
@@ -26,50 +26,34 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WDd-tD-mFH">
-                                            <rect key="frame" x="0.0" y="8" width="125" height="84"/>
+                                            <rect key="frame" x="16" y="8" width="84" height="84"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="WDd-tD-mFH" secondAttribute="height" multiplier="1:1" id="Qj8-uC-TrF"/>
+                                            </constraints>
                                         </imageView>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="G1Y-ER-Ahd">
-                                            <rect key="frame" x="133" y="11" width="221" height="78"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rover name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NBp-jQ-6Xb">
-                                                    <rect key="frame" x="0.0" y="0.0" width="221" height="21.333333333333332"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AeK-Rp-LHo">
-                                                    <rect key="frame" x="0.0" y="28.333333333333336" width="221" height="21.333333333333336"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VHf-Ls-TZv">
-                                                    <rect key="frame" x="0.0" y="56.666666666666679" width="221" height="21.333333333333336"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </stackView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wiI-Bb-Rvb">
+                                            <rect key="frame" x="108" y="16" width="246" height="68"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="G1Y-ER-Ahd" firstAttribute="leading" secondItem="WDd-tD-mFH" secondAttribute="trailing" constant="8" symbolic="YES" id="Hbg-hv-lL3"/>
-                                        <constraint firstAttribute="bottom" secondItem="WDd-tD-mFH" secondAttribute="bottom" constant="8" id="MMa-Q1-cra"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="G1Y-ER-Ahd" secondAttribute="trailing" constant="16" id="NlN-Q8-QJ6"/>
-                                        <constraint firstItem="WDd-tD-mFH" firstAttribute="top" secondItem="pgL-5m-D3y" secondAttribute="top" constant="8" id="Ylt-Fd-1Xo"/>
-                                        <constraint firstItem="WDd-tD-mFH" firstAttribute="leading" secondItem="pgL-5m-D3y" secondAttribute="leading" id="hSm-Ln-1th"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="G1Y-ER-Ahd" secondAttribute="bottom" id="kFq-Lu-5iC"/>
-                                        <constraint firstItem="G1Y-ER-Ahd" firstAttribute="top" secondItem="pgL-5m-D3y" secondAttribute="topMargin" id="tVp-eo-XuP"/>
+                                        <constraint firstItem="wiI-Bb-Rvb" firstAttribute="leading" secondItem="WDd-tD-mFH" secondAttribute="trailing" constant="8" symbolic="YES" id="4kn-vu-3y2"/>
+                                        <constraint firstItem="WDd-tD-mFH" firstAttribute="leading" secondItem="pgL-5m-D3y" secondAttribute="leading" constant="16" id="QJ6-u8-rMq"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="wiI-Bb-Rvb" secondAttribute="trailing" constant="16" id="TyT-Pg-4wb"/>
+                                        <constraint firstItem="wiI-Bb-Rvb" firstAttribute="top" secondItem="pgL-5m-D3y" secondAttribute="topMargin" constant="5" id="a9H-t1-0qF"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="wiI-Bb-Rvb" secondAttribute="bottom" constant="5" id="lEA-E0-ZNh"/>
+                                        <constraint firstAttribute="bottom" secondItem="WDd-tD-mFH" secondAttribute="bottom" constant="8" id="qk0-dq-Lua"/>
+                                        <constraint firstItem="WDd-tD-mFH" firstAttribute="top" secondItem="pgL-5m-D3y" secondAttribute="top" constant="8" id="rCw-aq-vV5"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <constraints>
-                                    <constraint firstItem="WDd-tD-mFH" firstAttribute="width" secondItem="qQZ-p3-6nq" secondAttribute="width" multiplier="0.320513" id="2Ep-vQ-p0M"/>
+                                    <constraint firstItem="WDd-tD-mFH" firstAttribute="width" secondItem="qQZ-p3-6nq" secondAttribute="width" multiplier="0.215385" id="QCA-Zt-am7"/>
                                 </constraints>
                                 <connections>
-                                    <outlet property="cameraNameLabel" destination="AeK-Rp-LHo" id="rlf-eP-QQD"/>
-                                    <outlet property="datePhotoLabel" destination="VHf-Ls-TZv" id="KEb-s3-2Wx"/>
+                                    <outlet property="photoInfo" destination="wiI-Bb-Rvb" id="D8U-OB-nwU"/>
                                     <outlet property="photoRoverImage" destination="WDd-tD-mFH" id="h2V-n6-P51"/>
-                                    <outlet property="roverNameLabel" destination="NBp-jQ-6Xb" id="HFK-rq-1mW"/>
                                     <segue destination="Ti8-tG-rUh" kind="show" identifier="info" id="YsW-HL-IUY"/>
                                 </connections>
                             </tableViewCell>
@@ -79,7 +63,7 @@
                             <outlet property="delegate" destination="2O6-hs-Fp5" id="JDw-0j-1Yi"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="sKX-Ok-Fzz"/>
+                    <navigationItem key="navigationItem" title="Mars Rover Photos" id="sKX-Ok-Fzz"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EUH-ao-1DT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
